2002-11-06  Masatake YAMATO  <jet@gyve.org>

	Added functions that converts multiple items to curves.
	* src/path-chemistry.c (sp_selected_item_to_curved_repr): 
	Use sp_selected_item_to_curved_repr0.
	(sp_selected_path_to_curves0): New function.
	(sp_selected_path_to_curves): New function.
	(SP_TOCURVE_*): Placeholders.

2002-11-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/export.c: Made glade-free dialog

	* src/file.c (sp_export_png_file): Make filename const

	* configure.in (CFLAGS): Added GCC warnings

2002-11-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/node-edit.c: Removed unused glade stuff

2002-11-04  Masatake YAMATO  <jet@gyve.org>

	* src/dialogs/xml-tree.c (sp_xml_tree_dialog): Added vpaned
	between sp_xmlview_attr_list_new and text fields.

2002-11-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* Makefile.am (SUBDIRS): Removed macros

	* autogen.sh: Made self-contained

	* configure.in: Removed macros

	* src/widgets/sp-xmlview-tree.c: new file by MenTaLguY

	* src/widgets/sp-xmlview-content.c: new file by MenTaLguY

	* src/widgets/sp-xmlview-attr-list.c: new file by MenTaLguY

	* src/libnrtype/nr-type-directory.c: Parsing works for normal fonts

2002-11-02  Masatake YAMATO  <jet@gyve.org>

	* README: removed GYVE.

	* doc/keybindings.txt: added a item for stamping.

	* doc/architecture.txt: Fix a typo in a document.
	/ is forgotten in a sample svg.

	* src/rect-context.c (sp_rect_context_config_widget): Fix a typo in a 
	label.

2002-11-01  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/desktop.h: s/GtkEventBoxClass/SPViewClass/; thanks to MenTaLguY

	* configure.in (have_gnome_print): Gnome-print support can be disabled

	* src/libnrtype/Makefile.am (INCLUDES): SODIPODI_GNOME_PRINT_CFLAGS

	* src/Makefile.am (sodipodi_LDADD): Added SODIPODI_GNOME_PRINT_LIBS
	(INCLUDES): Same for CFLAGS

2002-10-31  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/font-selector.c (struct _SPFontSelector): Use NRNameListss